--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <a href="#introducao">Início</a>
             <a href="#sobre">Sobre</a>
             <a href="#ferramentas">Tecnologias</a>
-            <a href="#">Projetos</a>
+            <a href="#projetos">Projetos</a>
             <a href="" target="_blank" class="btn_contato"><button>Linkedin</button></a>
             <a href="https://github.com/MatheusLJ/" target="_blank" class="btn_contato"><button>Github</button></a>
         </nav>
     </header>
     <section class="introducao" id="introducao">
-        <h1 class="introducao_titulo">Olá, sou <span>Matheus Jesus</span>, Desenvolvedor Front-End.</h1>
+        <h1 class="introducao_titulo">Olá, sou <span>Matheus Jesus</span>, Desenvolvedor Full Stack.</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus velit harum rem error officiis, ipsa maxime dolore autem cum dolorem! Aliquid corrupti molestias iste perspiciatis adipisci nam ducimus cupiditate? Quam! Lorem ipsum doveniet neque numquam recusandae totam voluptatibus! Sunt dolor rerum alias?</p>
         <h2>Comece onde você está. Use o que você tem.</h2>
         <h2 id="frase_part2">Faça o que você pode.</h2>
@@ -39,46 +39,99 @@
         </div>
         
     </section>
+
     <section class="ferramentas" id="ferramentas">
         <h1>Tecnologias</h1>
         <div class="conteudo-ferramentas">
             <div class="mini-box">
-                <div class="mini-box-img"><img src="img/html5.png" alt="Simbolo da linguagem de marcação HTML5"></div>
+                <div class="mini-box-img"><img src="img/icons/html5.png" alt="Simbolo da linguagem de marcação HTML5"></div>
                 <h3>HTML5</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae veritatis facilis nemo sapiente voluptatum id modi soluta aperiam eni</p>
             </div>
             <div class="mini-box">
-                <div class="mini-box-img"><img src="img/html5.png" alt="Simbolo da linguagem de marcação HTML5"></div>
+                <div class="mini-box-img"><img src="img/icons/css.png" alt="Simbolo da linguagem de marcação HTML5"></div>
                 <h3>HTML5</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae veritatis facilis nemo sapiente voluptatum id modi soluta aperiam eni</p>
             </div>
             <div class="mini-box">
-                <div class="mini-box-img"><img src="img/html5.png" alt="Simbolo da linguagem de marcação HTML5"></div>
+                <div class="mini-box-img"><img src="img/icons/javascript.png" alt="Simbolo da linguagem de marcação HTML5"></div>
                 <h3>HTML5</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae veritatis facilis nemo sapiente voluptatum id modi soluta aperiam eni</p>
             </div>
             <div class="mini-box">
-                <div class="mini-box-img"><img src="img/html5.png" alt="Simbolo da linguagem de marcação HTML5"></div>
+                <div class="mini-box-img"><img src="img/icons/php.png" alt="Simbolo da linguagem de marcação HTML5"></div>
                 <h3>HTML5</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae veritatis facilis nemo sapiente voluptatum id modi soluta aperiam eni</p>
             </div>
             <div class="mini-box">
-                <div class="mini-box-img"><img src="img/html5.png" alt="Simbolo da linguagem de marcação HTML5"></div>
+                <div class="mini-box-img"><img src="img/icons/mysql.png" alt="Simbolo da linguagem de marcação HTML5"></div>
                 <h3>HTML5</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae veritatis facilis nemo sapiente voluptatum id modi soluta aperiam eni</p>
             </div>
             <div class="mini-box">
-                <div class="mini-box-img"><img src="img/html5.png" alt="Simbolo da linguagem de marcação HTML5"></div>
+                <div class="mini-box-img"><img src="img/icons/github.png" alt="Simbolo da linguagem de marcação HTML5"></div>
                 <h3>HTML5</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae veritatis facilis nemo sapiente voluptatum id modi soluta aperiam eni</p>
             </div>
         </div>
     </section>
     <section id="projetos">
-        
+        <h1>Projetos</h1>
+        <button class="btn-seta-left control"><img src="img/icons/seta.png" alt="seta para esquerda"></button>
+        <div class="container-slider">
+            <div class="projetos-wrapper">
+                <div class="projetos-gallery">
+                    <div class="box-proj">
+                        <div class="img-proj"></div>
+                        <h2>Nome do Projeto</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
+                        <a href="" target="_blank"><button>Visualizar</button></a>
+                    </div>
+                    <div class="box-proj on">
+                        <div class="img-proj"></div>
+                        <h2>Nome do Projeto</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
+                        <a href="" target="_blank"><button>Visualizar</button></a>
+                    </div>
+                    <div class="box-proj">
+                        <div class="img-proj"></div>
+                        <h2>Nome do Projeto</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
+                        <a href="" target="_blank"><button>Visualizar</button></a>
+                    </div>
+                    <div class="box-proj">
+                        <div class="img-proj"></div>
+                        <h2>Nome do Projeto</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
+                        <a href="" target="_blank"><button>Visualizar</button></a>
+                    </div>
+                    <div class="box-proj">
+                        <div class="img-proj"></div>
+                        <h2>Nome do Projeto</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
+                        <a href="" target="_blank"><button>Visualizar</button></a>
+                    </div>
+                    <div class="box-proj">
+                        <div class="img-proj"></div>
+                        <h2>Nome do Projeto</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
+                        <a href="" target="_blank"><button>Visualizar</button></a>
+                    </div>
+                    <div class="box-proj">
+                        <div class="img-proj"></div>
+                        <h2>Nome do Projeto</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
+                        <a href="" target="_blank"><button>Visualizar</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="btn-seta-right control"><img src="img/icons/seta.png" alt="seta para direita"></button>
     </section>
-    <footer>
 
+    <footer>
+        <p>&copyMatheus Jesus. Todos os direitos reservados.</p>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
