Adicionando os projetos.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#sobre">Sobre</a>
             <a href="#ferramentas">Tecnologias</a>
             <a href="#projetos">Projetos</a>
-            <a href="" target="_blank" class="btn_contato"><button>Linkedin</button></a>
+            <a href="https://www.linkedin.com/in/matheus-leite-jesus-51a283277/" target="_blank" class="btn_contato"><button>Linkedin</button></a>
             <a href="https://github.com/MatheusLJ/" target="_blank" class="btn_contato"><button>Github</button></a>
         </nav>
     </header>
@@ -46,32 +46,32 @@
             <div class="mini-box">
                 <div class="mini-box-img"><img src="img/icons/html5.png" alt="Simbolo da linguagem de marcação HTML5"></div>
                 <h3>HTML5</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae veritatis facilis nemo sapiente voluptatum id modi soluta aperiam eni</p>
+                <p>HTML5 é uma linguagem de marcação para a World Wide Web e é uma tecnologia chave da Internet, originalmente proposto por Opera Software. É a quinta versão da linguagem HTML</p>
             </div>
             <div class="mini-box">
                 <div class="mini-box-img"><img src="img/icons/css.png" alt="Simbolo da linguagem de marcação HTML5"></div>
-                <h3>HTML5</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae veritatis facilis nemo sapiente voluptatum id modi soluta aperiam eni</p>
+                <h3>CSS</h3>
+                <p>CSS é a sigla para o termo em inglês Cascading Style Sheets que, traduzido para o português, significa Folha de Estilo em Cascatas. Utilizada para dar efeito e dinâminca a páginas de sites.</p>
             </div>
             <div class="mini-box">
                 <div class="mini-box-img"><img src="img/icons/javascript.png" alt="Simbolo da linguagem de marcação HTML5"></div>
-                <h3>HTML5</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae veritatis facilis nemo sapiente voluptatum id modi soluta aperiam eni</p>
+                <h3>JavaScript</h3>
+                <p>JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma. É uma das três principais tecnologias da World Wide Web.</p>
             </div>
             <div class="mini-box">
                 <div class="mini-box-img"><img src="img/icons/php.png" alt="Simbolo da linguagem de marcação HTML5"></div>
-                <h3>HTML5</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae veritatis facilis nemo sapiente voluptatum id modi soluta aperiam eni</p>
+                <h3>PHP</h3>
+                <p>PHP é uma linguagem interpretada livre, usada originalmente apenas para o desenvolvimento de aplicações presentes e atuantes no lado do servidor, capazes de gerar conteúdo dinâmico na World Wide Web.</p>
             </div>
             <div class="mini-box">
                 <div class="mini-box-img"><img src="img/icons/mysql.png" alt="Simbolo da linguagem de marcação HTML5"></div>
-                <h3>HTML5</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae veritatis facilis nemo sapiente voluptatum id modi soluta aperiam eni</p>
+                <h3>MySQL</h3>
+                <p> MySQL é um sistema de gerenciamento de banco de dados, que utiliza a linguagem SQL como interface. É atualmente um dos sistemas de gerenciamento de bancos de dados mais populares da Oracle.</p>
             </div>
             <div class="mini-box">
                 <div class="mini-box-img"><img src="img/icons/github.png" alt="Simbolo da linguagem de marcação HTML5"></div>
-                <h3>HTML5</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae veritatis facilis nemo sapiente voluptatum id modi soluta aperiam eni</p>
+                <h3>Git</h3>
+                <p>Git é um sistema de controle de versões distribuído, usado principalmente no desenvolvimento de software, mas pode ser usado para registrar o histórico de edições de qualquer tipo de arquivo.</p>
             </div>
         </div>
     </section>
@@ -82,47 +82,24 @@
             <div class="projetos-wrapper">
                 <div class="projetos-gallery">
                     <div class="box-proj">
-                        <div class="img-proj"></div>
-                        <h2>Nome do Projeto</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
-                        <a href="" target="_blank"><button>Visualizar</button></a>
+                        <img src="img/secitec2023.PNG" alt="" class="img-proj">
+                        <h2>Projeto de Visitas</h2>
+                        <p>Projeto desenvolvido por mim para registar em um banco de dados as visitas realizadas a uma apresentação da turma durante a SECITEC 2023 no Instituto Federal da Bahia.  Tecnologias: HTML, CSS, PHP e MySql.</p>
+                        <a href="https://github.com/MatheusLJ/Secitec2023" target="_blank"><button>Repositório</button></a>
                     </div>
                     <div class="box-proj on">
-                        <div class="img-proj"></div>
-                        <h2>Nome do Projeto</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
-                        <a href="" target="_blank"><button>Visualizar</button></a>
+                        <img src="img/landing.PNG" alt="" class="img-proj">
+                        <h2>Landing Page</h2>
+                        <p>Landing page com HTML, CSS e JavaScript com o intuito de demonstrar e descrever algumas cidades que são consideradadas grandes pontos turísticos. Ainda em desenvolvimento.</p>
+                        <a href="https://github.com/MatheusLJ/Landing_Page" target="_blank"><button>Repositório</button></a>
                     </div>
                     <div class="box-proj">
-                        <div class="img-proj"></div>
-                        <h2>Nome do Projeto</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
-                        <a href="" target="_blank"><button>Visualizar</button></a>
+                        <img src="img/contrafile.PNG" alt="" class="img-proj">
+                        <h2>Contra-Filé</h2>
+                        <p>Projeto realizado durante o curso de informática do Instituto Federal da Bahia com intuito de desenvolver um empreendimento e desenvolver um site que representasse o funcionamento do mesmo. Tecnologias: HTML, CSS, JavaScript, PHP e MySql.</p>
+                        <a href="https://github.com/MatheuszJesus/contrafile" target="_blank"><button>Repositório</button></a>
                     </div>
-                    <div class="box-proj">
-                        <div class="img-proj"></div>
-                        <h2>Nome do Projeto</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
-                        <a href="" target="_blank"><button>Visualizar</button></a>
-                    </div>
-                    <div class="box-proj">
-                        <div class="img-proj"></div>
-                        <h2>Nome do Projeto</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
-                        <a href="" target="_blank"><button>Visualizar</button></a>
-                    </div>
-                    <div class="box-proj">
-                        <div class="img-proj"></div>
-                        <h2>Nome do Projeto</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
-                        <a href="" target="_blank"><button>Visualizar</button></a>
-                    </div>
-                    <div class="box-proj">
-                        <div class="img-proj"></div>
-                        <h2>Nome do Projeto</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione voluptatibus esse repudiandae optio molestias, consequuntur placeat eius quis asperiores, eum dolorem dolor autem quos aliquam? Impedit voluptates adipisci accusantium eius.</p>
-                        <a href="" target="_blank"><button>Visualizar</button></a>
-                    </div>
+                    
                 </div>
             </div>
         </div>
