Adicionando descrição pessoal e contato.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <section class="introducao" id="introducao">
         <h1 class="introducao_titulo">Olá, sou <span>Matheus Jesus</span>, Desenvolvedor Full Stack.</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus velit harum rem error officiis, ipsa maxime dolore autem cum dolorem! Aliquid corrupti molestias iste perspiciatis adipisci nam ducimus cupiditate? Quam! Lorem ipsum doveniet neque numquam recusandae totam voluptatibus! Sunt dolor rerum alias?</p>
+        <p>Sou Matheus e convido você a conhecer e entender um pouco da minha caminhada até aqui como desenvolvedor, conhecer minhas inspirações, descobrir as tecnologias sobre as quais tenho domínio e conhecer alguns dos meus projetos realizados até aqui. Espero que goste!<p>
         <h2>Comece onde você está. Use o que você tem.</h2>
         <h2 id="frase_part2">Faça o que você pode.</h2>
         <img src="img/imagem_peb.png" alt="Imagem do propietário do site" class="introducao_img1">
@@ -34,7 +34,7 @@
             <img src="img/imagem_normal.png" alt="Imagem do propietário do site.">
             <div class="sobre-box-texts">
                 <h1>Sobre Mim</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt nihil eos necessitatibus tenetur aspernatur omnis dolorem totam impedit quidem voluptas voluptate accusamus fugit, molestiae et nisi odio quod tempora. Officiis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora voluptatum aliquam fugiat odio assumenda vel dolores. Nemo debitis eius molestias odit soluta delectus ullam harum quam, voluptates minus. Aperiam, cupiditate. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque repudiandae laudantium voluptate vitae laboriosam molestiae accusantium nam alias et suscipit? Culpa sapiente repellendus illum eum ipsum quaerat eaque, voluptatibus dolores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet laboriosam impedit eum dolor magnam nisi nam earum dicta neque debitis, accusamus cum, libero at necessitatibus minus, in tempore beatae delectus.</p>
+                <p>Bom, como dito anteriormente me chamo Matheus, tenho 17 anos e atualmente estou em busca da minha primeira experiência profissional neste mercado tão vasto e amplo. Tive contato com a programação aos 15 anos ao adentrar em um curso de informática no Instituto Federal da Bahia,  e de lá pra cá descobri que tenho talento e também apreço por essa área. Buscando sempre aprender mais e adquirir experiências. Atualmente no último ano do ensino médio tenho procurado correr atrás dos meus objetivos, almejando me aprofundar cada vez mais nesta área e esperando ter um 2024 de muitas conquistas.</p>
             </div>
         </div>
         
@@ -107,6 +107,7 @@
     </section>
 
     <footer>
+        <p>Contato: mleitejesus@gmail.com</p>
         <p>&copyMatheus Jesus. Todos os direitos reservados.</p>
     </footer>
     <script src="js/script.js"></script>
